<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin"
    tools:context="AboutActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginVertical="@dimen/activity_vertical_margin">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/activity_vertical_margin"
                android:paddingHorizontal="@dimen/activity_horizontal_margin">

                <TextView
                    style="@style/TextTitle"
                    android:text="@string/smart_village"
                    android:textAlignment="center"
                    android:textColor="@android:color/black" />

                <!--<TextView-->
                <!--style="@style/TextDesc"-->
                <!--android:layout_marginBottom="@dimen/activity_vertical_margin"-->
                <!--android:text="@string/versi"-->
                <!--android:textAlignment="center"-->
                <!--android:textColor="#555555" />-->

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="8dp"
                    android:src="@drawable/ic_logo_smart_village" />

                <TextView
                    style="@style/TextDesc"
                    android:text="@string/smktarunabhakti_net"
                    android:textAlignment="center"
                    android:textColor="#555555" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginVertical="@dimen/activity_vertical_margin"
                    android:background="@android:color/darker_gray" />

                <TextView
                    style="@style/TextTitle"
                    android:text="@string/our_team_head" />

                <TextView
                    style="@style/TextDesc"
                    android:text="@string/our_team" />

            </LinearLayout>
        </ScrollView>
    </android.support.v7.widget.CardView>
</LinearLayout>